--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -76,7 +76,7 @@ jobs:
           else
             pip install torch
           fi
-          pip install ray[default]==2.0.0 pytest koalas tensorflow==2.5.1 tabulate xgboost_ray[default] grpcio-tools wget
+          pip install ray[default]==2.0.0 pytest koalas tensorflow tabulate xgboost_ray[default] grpcio-tools wget
           pip install torchmetrics
           HOROVOD_WITH_GLOO=1
           HOROVOD_WITH_PYTORCH=1
@@ -100,7 +100,7 @@ jobs:
           pylint --rcfile=python/pylintrc examples/*.py
       - name: Test with pytest
         run: |
-          ray start --head --num-cpus 4
+          ray start --head --num-cpus 6
           pytest python/raydp/tests/ -m"not error_on_custom_resource"
           pytest python/raydp/tests/ -m"error_on_custom_resource"
           ray stop --force
