skip ray train example
Signed-off-by: Zhi Lin <zhi.lin@intel.com>

--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -113,5 +113,5 @@ jobs:
           python examples/tensorflow_nyctaxi.py
           python examples/horovod_nyctaxi.py
           python examples/xgboost_ray_nyctaxi.py
-          python examples/raytrain_nyctaxi.py
+          # python examples/raytrain_nyctaxi.py
           python examples/data_process.py
