--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -76,7 +76,7 @@ jobs:
           else
             pip install torch
           fi
-          pip install ray[default]==2.0.0 pytest koalas tensorflow tabulate xgboost_ray[default] grpcio-tools wget
+          pip install pyarrow==6.0.1 ray[default]==2.1.0 pytest koalas tensorflow tabulate xgboost_ray[default] grpcio-tools wget
           pip install torchmetrics
           HOROVOD_WITH_GLOO=1
           HOROVOD_WITH_PYTORCH=1
@@ -113,5 +113,5 @@ jobs:
           python examples/tensorflow_nyctaxi.py
           python examples/horovod_nyctaxi.py
           python examples/xgboost_ray_nyctaxi.py
-          python examples/raytrain_nyctaxi.py
+          # python examples/raytrain_nyctaxi.py
           python examples/data_process.py
