--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -69,6 +69,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install wheel
+          pip install "numpy<1.24"
           SUBVERSION=$(python -c 'import sys; print(sys.version_info[1])')
           if [ "$(uname -s)" == "Linux" ]
           then
