--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -102,8 +102,9 @@ jobs:
       - name: Test with pytest
         run: |
           ray start --head --num-cpus 6
-          pytest python/raydp/tests/ -m"not error_on_custom_resource"
-          pytest python/raydp/tests/ -m"error_on_custom_resource"
+          pytest python/raydp/tests/ -v -m"not error_on_custom_resource"
+          pytest python/raydp/tests/ -v -m"error_on_custom_resource"
+          cat /tmp/ray/session_latest/logs/*
           ray stop --force
       - name: Test Examples
         run: |
