--- a/core/pom.xml
+++ b/core/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.intel</groupId>
   <artifactId>raydp-parent</artifactId>
-  <version>0.7.0-SNAPSHOT</version>
+  <version>1.5.0</version>
   <packaging>pom</packaging>
 
   <name>RayDP Parent Pom</name>
