--- a/core/raydp-main/pom.xml
+++ b/core/raydp-main/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>com.intel</groupId>
     <artifactId>raydp-parent</artifactId>
-    <version>0.7.0-SNAPSHOT</version>
+    <version>1.5.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
