--- a/core/shims/common/pom.xml
+++ b/core/shims/common/pom.xml
@@ -7,13 +7,13 @@
   <parent>
     <groupId>com.intel</groupId>
     <artifactId>raydp-shims</artifactId>
-    <version>0.7.0-SNAPSHOT</version>
+    <version>1.5.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>raydp-shims-common</artifactId>
   <name>RayDP Shims Common</name>
-  <version>0.7.0-SNAPSHOT</version>
+  <version>1.5.0</version>
   <packaging>jar</packaging>
   
   <build>
