upload nightly build to raydp
Signed-off-by: Zhi Lin <zhi.lin@intel.com>

--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -54,6 +54,6 @@ jobs:
       run: pip install wheel grpcio-tools && ./build.sh
     - name: Upload
       if: env.COMMIT_TODAY == 'true'
-      uses: pypa/gh-action-pypi-publish@master
+      uses: pypa/gh-action-pypi-publish@release/v1
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
