--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -50,10 +50,10 @@ jobs:
     - name: Build wheel
       if: env.COMMIT_TODAY == 'true'
       env:
-        RAYDP_PACKAGE_NAME: raydp_nightly
+        RAYDP_BUILD_MODE: nightly
       run: pip install wheel grpcio-tools && ./build.sh
     - name: Upload
       if: env.COMMIT_TODAY == 'true'
-      uses: pypa/gh-action-pypi-publish@master
+      uses: pypa/gh-action-pypi-publish@release/v1
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
