--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -77,7 +77,8 @@ jobs:
           else
             pip install torch
           fi
-          pip install pyarrow==6.0.1 ray[default]==2.1.0 pytest koalas tensorflow tabulate xgboost_ray[default] grpcio-tools wget
+          pip install pyarrow==6.0.1 ray[default]==2.1.0 pytest koalas tensorflow tabulate grpcio-tools wget
+          pip install "xgboost_ray[default]<=0.1.13"
           pip install torchmetrics
           HOROVOD_WITH_GLOO=1
           HOROVOD_WITH_PYTORCH=1
