--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -31,7 +31,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest, macos-latest ]
         python-version: [3.7, 3.8, 3.9]
-        spark-version: [3.1.3, 3.2.2, 3.2.3, 3.3.1, 3.3.2]
+        spark-version: [3.1.3, 3.2.3, 3.3.2]
 
     runs-on: ${{ matrix.os }}
 
