--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -31,7 +31,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest, macos-latest ]
         python-version: [3.7, 3.8, 3.9]
-        spark-version: [3.1.3, 3.2.2, 3.3.1]
+        spark-version: [3.1.3, 3.2.3, 3.3.2]
 
     runs-on: ${{ matrix.os }}
 
@@ -48,6 +48,7 @@ jobs:
       - name: Install extra dependencies for macOS
         if: matrix.os == 'macos-latest'
         run: |
+          brew install pkg-config
           brew install libuv libomp mpich
       - name: Install extra dependencies for Ubuntu
         if: matrix.os == 'ubuntu-latest'
@@ -77,7 +78,8 @@ jobs:
           else
             pip install torch
           fi
-          pip install pyarrow==6.0.1 ray[default]==2.1.0 pytest koalas tensorflow tabulate xgboost_ray[default] grpcio-tools wget
+          pip install pyarrow==6.0.1 ray[default]==2.1.0 pytest koalas tensorflow tabulate grpcio-tools wget
+          pip install "xgboost_ray[default]<=0.1.13"
           pip install torchmetrics
           HOROVOD_WITH_GLOO=1
           HOROVOD_WITH_PYTORCH=1
