--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -29,7 +29,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ ubuntu-latest ]
+        os: [ ubuntu-latest, macos-latest ]
         python-version: [3.7, 3.8, 3.9]
         spark-version: [3.1.3, 3.2.3, 3.3.2]
 
@@ -67,8 +67,6 @@ jobs:
           path: ~/Library/Caches/pip
           key: ${{ matrix.os }}-${{ matrix.python-version }}-pip
       - name: Install dependencies
-        env:
-          PYTHON_VERSION: ${{ matrix.python-version }}
         run: |
           python -m pip install --upgrade pip
           pip install wheel
@@ -80,18 +78,7 @@ jobs:
           else
             pip install torch
           fi
-          case $PYTHON_VERSION in
-            3.7)
-              pip install "ray[default] @ https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-3.0.0.dev0-cp37-cp37m-manylinux2014_x86_64.whl"
-              ;;
-            3.8)
-              pip install "ray[default] @ https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-3.0.0.dev0-cp38-cp38-manylinux2014_x86_64.whl"
-              ;;
-            3.9)
-              pip install "ray[default] @ https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-3.0.0.dev0-cp39-cp39-manylinux2014_x86_64.whl"
-              ;;
-          esac
-          pip install pyarrow==6.0.1 pytest koalas tensorflow tabulate grpcio-tools wget
+          pip install pyarrow==6.0.1 ray[default]==2.1.0 pytest koalas tensorflow tabulate grpcio-tools wget
           pip install "xgboost_ray[default]<=0.1.13"
           pip install torchmetrics
           HOROVOD_WITH_GLOO=1
