--- a/core/shims/spark330/pom.xml
+++ b/core/shims/spark330/pom.xml
@@ -71,7 +71,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-core_2.12</artifactId>
+      <artifactId>spark-core_${scala.binary.version}</artifactId>
       <version>${spark330.version}</version>
       <scope>provided</scope>
     </dependency>
