skip horovod test
Signed-off-by: Zhi Lin <zhi.lin@intel.com>

--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -114,7 +114,7 @@ jobs:
           ray stop
           python examples/pytorch_nyctaxi.py
           python examples/tensorflow_nyctaxi.py
-          python examples/horovod_nyctaxi.py
+          # python examples/horovod_nyctaxi.py
           python examples/xgboost_ray_nyctaxi.py
           # python examples/raytrain_nyctaxi.py
           python examples/data_process.py
