--- a/core/shims/spark322/pom.xml
+++ b/core/shims/spark322/pom.xml
@@ -115,4 +115,5 @@
       <artifactId>protobuf-java</artifactId>
       <version>${protobuf.version}</version>
     </dependency>
+  </dependencies>
 </project>
