--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -71,6 +71,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install wheel
           pip install "numpy<1.24"
+          pip install "pydantic<2.0"
           SUBVERSION=$(python -c 'import sys; print(sys.version_info[1])')
           if [ "$(uname -s)" == "Linux" ]
           then
