use environment variable in maven
Signed-off-by: Zhi Lin <zhi.lin@intel.com>

--- a/core/shims/spark340/pom.xml
+++ b/core/shims/spark340/pom.xml
@@ -66,13 +66,13 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_${scala.binary.version}</artifactId>
-      <version>${spark340.version}</version>
+      <version>${env.SPARK340_VERSION}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_${scala.binary.version}</artifactId>
-      <version>${spark340.version}</version>
+      <version>${env.SPARK340_VERSION}</version>
       <scope>provided</scope>
       <exclusions>
         <exclusion>
