--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,10 +13,6 @@
   <url>https://github.com/oap-project/raydp.git</url>
 
   <properties>
-    <spark.version>3.2.2</spark.version>
-    <spark322.version>3.2.2</spark322.version>
-    <spark330.version>3.3.0</spark330.version>
-    <spark340.version>3.4.0</spark340.version>
     <snappy.version>1.1.10.1</snappy.version>
     <netty.version>4.1.94.Final</netty.version>
     <commons.text.version>1.10.0</commons.text.version>
@@ -44,7 +40,7 @@
       <dependency>
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-core_${scala.binary.version}</artifactId>
-        <version>${spark.version}</version>
+        <version>${env.SPARK_VERSION}</version>
         <scope>provided</scope>
         <exclusions>
           <exclusion>
@@ -72,7 +68,7 @@
       <dependency>
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-sql_${scala.binary.version}</artifactId>
-        <version>${spark.version}</version>
+        <version>${env.SPARK_VERSION}</version>
         <scope>provided</scope>
         <exclusions>
           <exclusion>
