--- a/core/raydp-main/pom.xml
+++ b/core/raydp-main/pom.xml
@@ -42,7 +42,7 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_${scala.binary.version}</artifactId>
-      <version>${spark.version}</version>
+      <version>${env.SPARK_VERSION}</version>
       <scope>provided</scope>
       <exclusions>
         <exclusion>
@@ -70,7 +70,7 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_${scala.binary.version}</artifactId>
-      <version>${spark.version}</version>
+      <version>${env.SPARK_VERSION}</version>
       <scope>provided</scope>
       <exclusions>
         <exclusion>
