--- a/core/shims/common/pom.xml
+++ b/core/shims/common/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_${scala.binary.version}</artifactId>
-            <version>${spark.version}</version>
+            <version>${env.SPARK_VERSION}</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_${scala.binary.version}</artifactId>
-            <version>${spark.version}</version>
+            <version>${env.SPARK_VERSION}</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
