--- a/core/shims/spark322/pom.xml
+++ b/core/shims/spark322/pom.xml
@@ -66,7 +66,7 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_${scala.binary.version}</artifactId>
-      <version>${spark322.version}</version>
+      <version>${env.SPARK322_VERSION}</version>
       <scope>provided</scope>
       <exclusions>
         <exclusion>
@@ -78,7 +78,7 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_${scala.binary.version}</artifactId>
-      <version>${spark322.version}</version>
+      <version>${env.SPARK322_VERSION}</version>
       <scope>provided</scope>
       <exclusions>
         <exclusion>
