--- a/core/shims/spark330/pom.xml
+++ b/core/shims/spark330/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>com.intel</groupId>
     <artifactId>raydp-shims</artifactId>
-    <version>1.6.0-SNAPSHOT</version>
+    <version>1.6.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
