--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -31,7 +31,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         python-version: [3.7, 3.8, 3.9]
-        spark-version: [3.1.3, 3.2.4, 3.3.2, 3.4.0, 3.5.0]
+        spark-version: [3.1.3, 3.2.4, 3.3.2, 3.4.0]
 
     runs-on: ${{ matrix.os }}
 
