--- a/.github/workflows/raydp_nightly.yml
+++ b/.github/workflows/raydp_nightly.yml
@@ -17,11 +17,14 @@
 
 name: Legacy raydp_nightly PyPi
 
-on: 
+on:
   schedule:
     - cron: '0 0 * * *'
   # can manually trigger the workflow
   workflow_dispatch:
+
+permissions:  # added using https://github.com/step-security/secure-repo
+  contents: read
 
 jobs:
   build-and-publish:
@@ -30,13 +33,13 @@ jobs:
     name: build wheel and upload
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@61b9e3751b92087fd0b06925ba6dd6314e06f089 # master
     - name: Set up Python 3.7
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@0f07f7f756721ebd886c2462646a35f78a8bc4de # v1.2.4
       with:
         python-version: 3.7
     - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@b6e674f4b717d7b0ae3baee0fbe79f498905dfde # v1.4.4
       with:
         java-version: 1.8
     - name: days since the commit date
@@ -54,6 +57,6 @@ jobs:
       run: pip install wheel grpcio-tools && ./build.sh
     - name: Upload
       if: env.COMMIT_TODAY == 'true'
-      uses: pypa/gh-action-pypi-publish@release/v1
+      uses: pypa/gh-action-pypi-publish@e53eb8b103ffcb59469888563dc324e3c8ba6f06 # release/v1
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
