--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -75,7 +75,7 @@ jobs:
           SUBVERSION=$(python -c 'import sys; print(sys.version_info[1])')
           if [ "$(uname -s)" == "Linux" ]
           then
-            pip install torch==2.1.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+            pip install pip3 install torch --index-url https://download.pytorch.org/whl/cpu
           else
             pip install torch
           fi
