--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -33,7 +33,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest ]
-        python-version: [3.8, 3.9]
+        python-version: [3.8, 3.9, 3.10]
         spark-version: [3.1.3, 3.2.4, 3.3.2, 3.4.0]
 
     runs-on: ${{ matrix.os }}
