--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -82,7 +82,8 @@ jobs:
           else
             pip install torch
           fi
-          pip install pyarrow==6.0.1 ray[train] pytest tensorflow==2.14.0 tabulate grpcio-tools wget
+          pip install tensorflow --upgrade
+          pip install pyarrow==6.0.1 ray[train] pytest tensorflow tabulate grpcio-tools wget
           pip install "xgboost_ray[default]<=0.1.13"
           pip install torchmetrics
       - name: Cache Maven
