fix executor custom resource request+support pyarrow >=15 & spark 3.5.2/3/4 (#419)
* fix executor custom resource request

* support spark 3.5.2/3

* migrate to latest API

* test against multiple ray version

* unpin pyarrow

* use iter_internal_ref_bundles in test, require ray >= 2.33.0

* fix test, init ray cluster properly

* worksaorund

* worksaorund

* work around a bug in spark

* Add spark 3.4.4 and 3.5.4 support

--- a/.github/workflows/ray_nightly_test.yml
+++ b/.github/workflows/ray_nightly_test.yml
@@ -31,7 +31,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest ]
-        python-version: [3.8, 3.9, 3.10.14]
+        python-version: [3.9, 3.10.14]
         spark-version: [3.2.4, 3.3.2, 3.4.0, 3.5.0]
 
     runs-on: ${{ matrix.os }}
@@ -82,17 +82,14 @@ jobs:
             pip install torch
           fi
           case $PYTHON_VERSION in
-            3.7)
-              pip install "ray[train] @ https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-3.0.0.dev0-cp37-cp37m-manylinux2014_x86_64.whl"
-              ;;
-            3.8)
-              pip install "ray[train] @ https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-3.0.0.dev0-cp38-cp38-manylinux2014_x86_64.whl"
-              ;;
             3.9)
               pip install "ray[train] @ https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-3.0.0.dev0-cp39-cp39-manylinux2014_x86_64.whl"
               ;;
+            3.10.14)
+              pip install "ray[train] @ https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-3.0.0.dev0-cp310-cp310-manylinux2014_x86_64.whl"
+              ;;
           esac
-          pip install pyarrow==6.0.1 pytest koalas tensorflow==2.13.1 tabulate grpcio-tools wget
+          pip install pyarrow tqdm pytest tensorflow==2.13.1 tabulate grpcio-tools wget
           pip install "xgboost_ray[default]<=0.1.13"
           pip install torchmetrics
           HOROVOD_WITH_GLOO=1
