only set spark master memory instead

--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -83,7 +83,7 @@ jobs:
           else
             pip install torch
           fi
-          pip install pyarrow "ray[train]==${{ matrix.ray-version }}" tqdm pytest tensorflow==2.13.1 tabulate grpcio-tools wget
+          pip install pyarrow "ray[train,default]==${{ matrix.ray-version }}" tqdm pytest tensorflow==2.13.1 tabulate grpcio-tools wget
           pip install "xgboost_ray[default]<=0.1.13"
           pip install "xgboost<=2.0.3"
           pip install torchmetrics
@@ -106,7 +106,7 @@ jobs:
           pylint --rcfile=python/pylintrc examples/*.py
       - name: Test with pytest
         run: |
-          ray start --head --num-cpus 6
+          ray start --head --num-cpus 6 --dashboard-host localhost
           pytest python/raydp/tests/ -v
           ray stop --force
       - name: Test Examples
